# Pdf-RAG-langchain

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/vectorstore/: chroma.sqlite3
static/: script.js  style.css
templates/: index.html
